--- a/works.html
+++ b/works.html
@@ -246,11 +246,11 @@
     </article>
 
     <!-- PROJECT 3 -->
-    <article class="project" data-video-id="VIDEO_ID_3">
+    <article class="project" data-video-id="VZtuoNZ3XqY">
       <div class="project-media">
         <div class="media-inner" data-video-loaded="false">
           <img class="thumb" src="images/logoSpecialWep.webp" alt="معاينة فيديو المشروع 3" loading="lazy">
-          <button class="play-btn" type="button" aria-label="تشغيل فيديو المشروع 3" data-video-id="VIDEO_ID_3">
+          <button class="play-btn" type="button" aria-label="تشغيل فيديو المشروع 3" data-video-id="VZtuoNZ3XqY">
             <span class="play-circle" aria-hidden="true">
               <svg viewBox="0 0 24 24" width="36" height="36" aria-hidden="true"><path d="M8 5v14l11-7z" fill="currentColor"/></svg>
             </span>
@@ -453,3 +453,4 @@ document.addEventListener("DOMContentLoaded", function () {
     <script src="js/script.js"></script>
   </body>
 </html>
+
