--- a/contactus.html
+++ b/contactus.html
@@ -602,7 +602,7 @@
     box-shadow: 0 8px 30px rgba(0,0,0,0.5);
     border:1px solid rgba(255,255,255,0.03);
     align-items:start;
-    width: 400px;
+    max-width: 400px;
   }
 
   /* عمودين على الشاشات الكبيرة */
@@ -859,6 +859,7 @@
     <script src="js/script.js"></script>
   </body>
 </html>
+
 
 
 
