--- a/contactus.html
+++ b/contactus.html
@@ -717,6 +717,57 @@
     .form-wrap{ padding:10px; }
     .section-title{ font-size:18px; }
   }
+
+  /* 1) منع التمرير الأفقي العام */
+html,body{ overflow-x:hidden; }
+
+/* 2) اجعل النموذج أعمدة مفردة على الشاشات الصغيرة */
+@media (max-width: 900px){
+  .contact-form{
+    grid-template-columns: 1fr !important; /* اجبار عمود واحد */
+    gap:12px;
+    padding:14px;
+  }
+
+  /* اخفي أو حوّل الـ aside لصف كامل بدلاً من حجمه الثابت */
+  aside, .meta { display:none !important; }
+
+  /* تقليل الحشو والهوامش للهواتف */
+  .form-wrap{ padding-left:12px; padding-right:12px; }
+
+  /* حجم اللوجو والعناوين أصغر */
+  .section-title{ font-size:18px; }
+  .logo{ width:48px; height:48px; flex:0 0 48px; }
+}
+
+/* 3) تأكد أن الحقول لا تفرض عرضاً أدنى (يسمح بالتصغير داخل الشبكة) */
+.contact-form input,
+.contact-form select,
+.contact-form textarea{
+  min-width:0; /* مهم داخل grid لكي لا يكسر الأعمدة */
+  box-sizing:border-box;
+}
+
+/* 4) اتجاه النص: اجعل الحقول العربية نصاً إلى اليمين، لكن الايميل/الهاتف لائحة من اليسار */
+.contact-form input[type="text"],
+.contact-form textarea{ direction: rtl; text-align: right; }
+.contact-form input[type="email"],
+.contact-form input[type="tel"]{ direction: ltr; text-align: left; }
+
+/* 5) تصغير الحواف والحدود ليظهر النموذج أوسع */
+.contact-form{ border-radius:12px; }
+.contact-form .field{ margin:0; }
+
+/* 6) تحسين ظهور الـ select على الموبايل */
+.contact-form select{ -webkit-appearance: none; appearance: none; }
+
+/* 7) تهيئة حالة التركيز للأجهزة اللمسية */
+.contact-form input:focus,
+.contact-form select:focus,
+.contact-form textarea:focus{
+  outline: 3px solid rgba(109,40,217,0.12);
+  outline-offset: 2px;
+}
 </style>
 
 <!-- ضع هذا قبل نهاية </body> -->
@@ -859,6 +910,7 @@
     <script src="js/script.js"></script>
   </body>
 </html>
+
 
 
 
