--- a/contactus.html
+++ b/contactus.html
@@ -267,7 +267,7 @@
                   name="email"
                   type="email"
                   required
-                  placeholder="name@example.com"
+                  placeholder="name@gmail.com"
                   aria-required="true"
                 />
               </label>
@@ -278,7 +278,7 @@
                   name="phone"
                   type="tel"
                   required
-                  placeholder="+963 9X XXX XXXX"
+                  placeholder="+963 900000"
                   aria-required="true"
                 />
               </label>
@@ -721,6 +721,7 @@
     <script src="js/script.js"></script>
   </body>
 </html>
+
 
 
 
