--- a/contactus.html
+++ b/contactus.html
@@ -611,6 +611,14 @@
     }
     /* بعض الحقول يجب أن تمتد بعرض كامل */
     .contact-form .full{ grid-column:1 / -1; }
+          input[type="text"],
+  input[type="email"],
+  input[type="tel"],
+  select,
+  textarea,
+  input[type="file"]{
+    width: auto !important;
+  }
   }
 
   .field{
@@ -718,9 +726,147 @@
   }
 </style>
     <!-- JS -->
+    !-- ضع هذا قبل نهاية </body> -->
+<script>
+  (function(){
+    const form = document.getElementById('contactForm');
+    if(!form) return;
+    const notice = document.getElementById('form-notice');
+    const submitBtn = form.querySelector('button[type="submit"]') || document.querySelector('.btn-primary');
+    const resetBtn = document.getElementById('resetBtn');
+    const MAX_FILE_BYTES = 5 * 1024 * 1024; // 5MB
+
+    function setNotice(type, msg){
+      notice.className = 'form-notice ' + (type==='error' ? 'error' : (type==='success' ? 'success' : ''));
+      notice.textContent = msg || '';
+    }
+
+    function clearFieldErrors(){
+      form.querySelectorAll('.field-error').forEach(el => el.remove());
+    }
+
+    function showFieldError(fieldEl, msg){
+      let err = fieldEl.parentElement.querySelector('.field-error');
+      if(!err){
+        err = document.createElement('div');
+        err.className = 'field-error';
+        fieldEl.parentElement.appendChild(err);
+      }
+      err.textContent = msg;
+    }
+
+    function validateEmail(email){
+      return /^[^\s@]+@[^\s@]+\.[^\s@]+$/.test(email);
+    }
+
+    form.addEventListener('submit', function(e){
+      e.preventDefault();
+
+      clearFieldErrors();
+      setNotice('', '');
+
+      // Honeypot check
+      const hp = form.querySelector('input[name="website"]');
+      if(hp && hp.value.trim() !== ''){
+        // likely bot — silently stop
+        setNotice('error','تم رفض الإرسال (محتوى غير صالح).');
+        return;
+      }
+
+      let ok = true;
+
+      // Required fields (حسب الفورم الخاص بك)
+      const name = form.querySelector('[name="name"]');
+      const email = form.querySelector('[name="email"]');
+      const phone = form.querySelector('[name="phone"]');
+      const service = form.querySelector('[name="service"]');
+      const message = form.querySelector('[name="message"]');
+      const consent = form.querySelector('[name="consent"]');
+
+      if(name && !name.value.trim()){ showFieldError(name, 'الاسم مطلوب'); ok=false; }
+      if(email && (!email.value.trim() || !validateEmail(email.value.trim()))){ showFieldError(email, 'أدخل بريدًا إلكترونيًا صالحًا'); ok=false; }
+      if(phone && !phone.value.trim()){ showFieldError(phone, 'رقم الهاتف مطلوب'); ok=false; }
+      if(service && !service.value.trim()){ showFieldError(service, 'اختر نوع الخدمة'); ok=false; }
+      if(message && !message.value.trim()){ showFieldError(message, 'اكتب وصفًا للمشروع'); ok=false; }
+      if(consent && !consent.checked){ showFieldError(consent, 'الموافقة مطلوبة'); ok=false; }
+
+      // file size check
+      const fileInput = form.querySelector('[name="attachment"]');
+      if(fileInput && fileInput.files && fileInput.files.length){
+        const f = fileInput.files[0];
+        if(f.size > MAX_FILE_BYTES){
+          showFieldError(fileInput, 'الملف أكبر من 5MB — اختر ملفًا أصغر');
+          ok=false;
+        }
+      }
+
+      if(!ok){
+        setNotice('error','يوجد أخطاء في النموذج، صحّحها ثم أعد الإرسال.');
+        return;
+      }
+
+      // Disable submit and show busy state then submit the form (keep native action to Formspree)
+      if(submitBtn){
+        submitBtn.disabled = true;
+        const originalTxt = submitBtn.textContent;
+        submitBtn.textContent = 'جاري الإرسال...';
+        submitBtn.setAttribute('aria-busy','true');
+
+        // small timeout for UX before actual submit (so user sees state)
+        setTimeout(()=> {
+          // Submit the form normally (POST to action)
+          try{
+            form.submit();
+          } catch(err){
+            // fallback if prevented by browser
+            setNotice('error','حدث خطأ أثناء الإرسال، حاول لاحقًا.');
+            submitBtn.disabled = false;
+            submitBtn.textContent = originalTxt;
+            submitBtn.removeAttribute('aria-busy');
+          }
+        }, 300);
+      } else {
+        form.submit();
+      }
+    });
+
+    // Reset button behavior: clear notices & field-errors
+    if(resetBtn){
+      resetBtn.addEventListener('click', function(){
+        form.reset();
+        clearFieldErrors();
+        setNotice('','');
+      });
+    }
+
+    // Optional: live file size hint (for UX)
+    const fIn = form.querySelector('[name="attachment"]');
+    if(fIn){
+      fIn.addEventListener('change', function(){
+        const parent = fIn.parentElement;
+        // remove old hint
+        const prev = parent.querySelector('.file-hint');
+        if(prev) prev.remove();
+        if(fIn.files && fIn.files.length){
+          const s = fIn.files[0].size;
+          const text = s > MAX_FILE_BYTES ? 'حجم كبير جدًا' : Math.round(s/1024) + ' KB';
+          const hint = document.createElement('div');
+          hint.className = 'file-hint';
+          hint.style.fontSize='13px';
+          hint.style.color = s > MAX_FILE_BYTES ? '#ffb4b4' : 'var(--muted)';
+          hint.textContent = 'الحجم: ' + text;
+          parent.appendChild(hint);
+        }
+      });
+    }
+
+  })();
+</script>
+
     <script src="js/script.js"></script>
   </body>
 </html>
+
 
 
 
