--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <meta name="robots" content="index, follow">
 
   <!-- canonical: استبدل بعنوان موقعك النهائي بعد النشر -->
-  <link rel="canonical" href="REPLACE_CANONICAL_URL_HERE">
+  <link rel="canonical" href="https://ahmedob2025.github.io/SpecialWeb/index.html">
 
   <!-- theme color للشريط العلوي على الهواتف -->
   <meta name="theme-color" content="#0F172A">
@@ -39,11 +39,20 @@
   <!-- مؤلف/شركة -->
   <meta name="author" content="SpecialWeb _ Ahmed Obaidat">
 
-  <!-- ======== FAVICONS محلياً ======== -->
-  <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon">
-  <link rel="icon" href="assets/images/favicon-32x32.png" sizes="32x32" type="image/png">
-  <link rel="apple-touch-icon" href="assets/images/apple-touch-icon.png" sizes="180x180">
-  <link rel="manifest" href="assets/manifest.json">
+    <!-- ======== FAVICONS محلياً ======== -->
+    <link rel="icon" href="images/logo-SpecialWep.jpg" type="image/x-icon" />
+    <link
+      rel="icon"
+      href="images/logo-SpecialWep.jpg"
+      sizes="32x32"
+      type="image/png"
+    />
+    <link
+      rel="apple-touch-icon"
+      href="images/logo-SpecialWep.jpg"
+      sizes="180x180"
+    />
+    <link rel="manifest" href="images/logo-SpecialWep.jpg" />
 
   <!-- ======== تحميل الخطوط (يمكن استضافتها محلياً لاحقاً) ======== -->
   <!-- preconnect لتسريع تحميل الخطوط الخارجية -->
@@ -56,7 +65,7 @@
 
   <!-- ======== صورة الهيرو/OG محلياً (نستخدم مسار محلي الآن) ======== -->
   <!-- ملاحظة: بعد النشر إلى GitHub Pages من الأفضل استبدال og:image برابط مطلق كامل -->
-  <link rel="preload" href="assets/images/og-image-1200x630.webp" as="image">
+  <link rel="preload" href="https://ahmedob2025.github.io/SpecialWeb/images/hero-img0-webp.webp" as="image">
   <meta property="og:image" content="assets/images/og-image-1200x630.webp">
   <meta property="og:image:alt" content="SpecialWeb — تصميم وتطوير مواقع">
 
@@ -66,13 +75,13 @@
   <meta property="og:title" content="SpecialWeb — تصميم وتطوير مواقع وتسويق إلكتروني احترافي">
   <meta property="og:description" content="SpecialWeb نصمّم مواقع متجاوبة ونقدّم حلول تسويق وإنتاج فيديو لمساعدتك على النمو الرقمي.">
   <!-- لاحظ: بعد النشر، استبدل og:url برابط صفحتك الكاملة -->
-  <meta property="og:url" content="REPLACE_CANONICAL_URL_HERE">
+  <meta property="og:url" content="https://ahmedob2025.github.io/SpecialWeb/index.html">
 
   <!-- ======== Twitter Card ======== -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="SpecialWeb — تصميم وتطوير مواقع">
   <meta name="twitter:description" content="نحو حضور رقمي فعّال — خدمات تصميم مواقع وتسويق وإنتاج فيديو.">
-  <meta name="twitter:image" content="assets/images/og-image-1200x630.webp">
+  <meta name="twitter:image" content="https://ahmedob2025.github.io/SpecialWeb/images/hero-img0-webp.webp">
 
   <!-- ======== Structured Data (JSON-LD) — منظمة بشكل أساسي للشركة ======== -->
   <script type="application/ld+json">
@@ -102,7 +111,7 @@
   <!-- ======== تحسين الأداء إضافي: prefetch لنطاقات خارجية محتملة ======== -->
   <link rel="dns-prefetch" href="//ajax.googleapis.com">
   <link rel="dns-prefetch" href="//www.google-analytics.com">
-
+  <link rel="dns-prefetch" href="//formspree.io"/>
 </head>
   <body>
     <header class="header">
@@ -542,3 +551,4 @@
     <script src="js/script.js"></script>
   </body>
 </html>
+
