--- a/auto.html
+++ b/auto.html
@@ -1,13 +1,13 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="ar" dir="rtl">
-<head>
-  <!-- ترميز الصفحة (UTF-8) لعرض العربية بشكل صحيح -->
-  <meta charset="utf-8">
+  <head>
+    <!-- ترميز الصفحة (UTF-8) لعرض العربية بشكل صحيح -->
+    <meta charset="utf-8" />
 
-  <!-- توافق مع IE ومرجع عام -->
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <!-- توافق مع IE ومرجع عام -->
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
-      <link
+    <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
       integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
@@ -15,92 +15,134 @@
       referrerpolicy="no-referrer"
     />
 
-  <!-- واجهة متجاوبة: ضروري للـmobile -->
-  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
+    <!-- واجهة متجاوبة: ضروري للـmobile -->
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, viewport-fit=cover"
+    />
 
-  <!-- عنوان الصفحة (غيّره إن رغبت) -->
-  <title>من نحن — SpecialWeb: فريق تصميم وتطوير وحلول رقمية</title>
-  <!-- وصف موجز احترافي يظهر في نتائج البحث -->
+    <!-- عنوان الصفحة (غيّره إن رغبت) -->
+    <title>من نحن — SpecialWeb: فريق تصميم وتطوير وحلول رقمية</title>
+    <!-- وصف موجز احترافي يظهر في نتائج البحث -->
 
-<meta name="description" content="SpecialWeb شريكك الرقمي: فريق مبدع يجمع بين التصميم والتطوير والتسويق. نؤمن بحلول مستندة إلى بيانات ونطور استراتيجيات تناسب نشاطك لنتائج قابلة للقياس. تعرف علين">
-  <!-- كلمات مفتاحية مرجعية (اختياري) -->
-  <meta name="keywords" content="من نحن, عن SpecialWeb, فريق تطوير مواقع, وكالة رقمية, خبرات تصميم">
-  <!-- تعليمات لعناكب البحث -->
-  <meta name="robots" content="index, follow">
+    <meta
+      name="description"
+      content="SpecialWeb شريكك الرقمي: فريق مبدع يجمع بين التصميم والتطوير والتسويق. نؤمن بحلول مستندة إلى بيانات ونطور استراتيجيات تناسب نشاطك لنتائج قابلة للقياس. تعرف علين"
+    />
+    <!-- كلمات مفتاحية مرجعية (اختياري) -->
+    <meta
+      name="keywords"
+      content="من نحن, عن SpecialWeb, فريق تطوير مواقع, وكالة رقمية, خبرات تصميم"
+    />
+    <!-- تعليمات لعناكب البحث -->
+    <meta name="robots" content="index, follow" />
 
-  <!-- canonical: استبدل بعنوان موقعك النهائي بعد النشر -->
-  <link rel="canonical" href="REPLACE_CANONICAL_URL_HERE">
+    <!-- canonical: استبدل بعنوان موقعك النهائي بعد النشر -->
+    <link
+      rel="canonical"
+      href="https://ahmedob2025.github.io/SpecialWeb/auto.html"
+    />
 
-  <!-- theme color للشريط العلوي على الهواتف -->
-  <meta name="theme-color" content="#0F172A">
+    <!-- theme color للشريط العلوي على الهواتف -->
+    <meta name="theme-color" content="#0F172A" />
 
-  <!-- مؤلف/شركة -->
-  <meta name="author" content="SpecialWeb _ Ahmed Obaidat">
+    <!-- مؤلف/شركة -->
+    <meta name="author" content="SpecialWeb _ Ahmed Obaidat" />
 
-  <!-- ======== FAVICONS محلياً ======== -->
-  <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon">
-  <link rel="icon" href="assets/images/favicon-32x32.png" sizes="32x32" type="image/png">
-  <link rel="apple-touch-icon" href="assets/images/apple-touch-icon.png" sizes="180x180">
-  <link rel="manifest" href="assets/manifest.json">
+    <!-- ======== FAVICONS محلياً ======== -->
+    <link rel="icon" href="images/logo-SpecialWep.jpg" type="image/x-icon" />
+    <link
+      rel="icon"
+      href="images/logo-SpecialWep.jpg"
+      sizes="32x32"
+      type="image/png"
+    />
+    <link
+      rel="apple-touch-icon"
+      href="images/logo-SpecialWep.jpg"
+      sizes="180x180"
+    />
+    <link rel="manifest" href="images/logo-SpecialWep.jpg" />
 
-  <!-- ======== تحميل الخطوط (يمكن استضافتها محلياً لاحقاً) ======== -->
-  <!-- preconnect لتسريع تحميل الخطوط الخارجية -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;600;700;800&display=swap" rel="stylesheet">
+    <!-- ======== تحميل الخطوط (يمكن استضافتها محلياً لاحقاً) ======== -->
+    <!-- preconnect لتسريع تحميل الخطوط الخارجية -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;600;700;800&display=swap"
+      rel="stylesheet"
+    />
 
-  <!-- ======== CSS الرئيسي (محلي) مع preload لتقليل FOUC/LCP ======== -->
-  <link rel="stylesheet" href="css/style.css">
-  <!-- ======== صورة الهيرو/OG محلياً (نستخدم مسار محلي الآن) ======== -->
-  <!-- ملاحظة: بعد النشر إلى GitHub Pages من الأفضل استبدال og:image برابط مطلق كامل -->
-  <link rel="preload" href="assets/images/og-image-1200x630.webp" as="image">
-  <meta property="og:image" content="assets/images/og-image-1200x630.webp">
-  <meta property="og:image:alt" content="SpecialWeb — تصميم وتطوير مواقع">
+    <!-- ======== CSS الرئيسي (محلي) مع preload لتقليل FOUC/LCP ======== -->
+    <link rel="stylesheet" href="css/style.css" />
+    <!-- ======== صورة الهيرو/OG محلياً (نستخدم مسار محلي الآن) ======== -->
+    <!-- ملاحظة: بعد النشر إلى GitHub Pages من الأفضل استبدال og:image برابط مطلق كامل -->
+    <link
+      rel="preload"
+      href="https://ahmedob2025.github.io/SpecialWeb/images/auto3-webp.webp"
+      as="image"
+    />
+    <meta property="og:image" content="assets/images/og-image-1200x630.webp" />
+    <meta property="og:image:alt" content="SpecialWeb — تصميم وتطوير مواقع" />
 
-  <!-- ======== Open Graph (مشاركـة اجتماعية) ======== -->
-  <meta property="og:type" content="website">
-  <meta property="og:site_name" content="SpecialWeb">
-  <meta property="og:title" content="SpecialWeb — تصميم وتطوير مواقع وتسويق إلكتروني احترافي">
-  <meta property="og:description" content="SpecialWeb نصمّم مواقع متجاوبة ونقدّم حلول تسويق وإنتاج فيديو لمساعدتك على النمو الرقمي.">
-  <!-- لاحظ: بعد النشر، استبدل og:url برابط صفحتك الكاملة -->
-  <meta property="og:url" content="REPLACE_CANONICAL_URL_HERE">
+    <!-- ======== Open Graph (مشاركـة اجتماعية) ======== -->
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="SpecialWeb" />
+    <meta
+      property="og:title"
+      content="SpecialWeb — تصميم وتطوير مواقع وتسويق إلكتروني احترافي"
+    />
+    <meta
+      property="og:description"
+      content="SpecialWeb نصمّم مواقع متجاوبة ونقدّم حلول تسويق وإنتاج فيديو لمساعدتك على النمو الرقمي."
+    />
+    <!-- لاحظ: بعد النشر، استبدل og:url برابط صفحتك الكاملة -->
+    <meta
+      property="og:url"
+      content="https://ahmedob2025.github.io/SpecialWeb/auto.html"
+    />
 
-  <!-- ======== Twitter Card ======== -->
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="SpecialWeb — تصميم وتطوير مواقع">
-  <meta name="twitter:description" content="نحو حضور رقمي فعّال — خدمات تصميم مواقع وتسويق وإنتاج فيديو.">
-  <meta name="twitter:image" content="assets/images/og-image-1200x630.webp">
+    <!-- ======== Twitter Card ======== -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="SpecialWeb — تصميم وتطوير مواقع" />
+    <meta
+      name="twitter:description"
+      content="نحو حضور رقمي فعّال — خدمات تصميم مواقع وتسويق وإنتاج فيديو."
+    />
+    <meta
+      name="twitter:image"
+      content="https://ahmedob2025.github.io/SpecialWeb/images/auto3-webp.webp"
+    />
 
-  <!-- ======== Structured Data (JSON-LD) — منظمة بشكل أساسي للشركة ======== -->
-  <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "Organization",
-    "name": "SpecialWeb",
-    "url": "REPLACE_DOMAIN_HERE",
-    "logo": "REPLACE_DOMAIN_HERE/assets/images/logo.png",
-    "sameAs": [
-      "https://www.facebook.com/profile.php?id=61577997461904",
-      "https://www.instagram.com/specialweb8/"
-    ],
-    "contactPoint": [
+    <!-- ======== Structured Data (JSON-LD) — منظمة بشكل أساسي للشركة ======== -->
+    <script type="application/ld+json">
       {
-        "@type": "ContactPoint",
-        "telephone": "+963992812546",
-        "contactType": "customer service",
-        "areaServed": "SY",
-        "availableLanguage": ["Arabic","English"]
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "name": "SpecialWeb",
+        "url": "REPLACE_DOMAIN_HERE",
+        "logo": "REPLACE_DOMAIN_HERE/assets/images/logo.png",
+        "sameAs": [
+          "https://www.facebook.com/profile.php?id=61577997461904",
+          "https://www.instagram.com/specialweb8/"
+        ],
+        "contactPoint": [
+          {
+            "@type": "ContactPoint",
+            "telephone": "+963992812546",
+            "contactType": "customer service",
+            "areaServed": "SY",
+            "availableLanguage": ["Arabic", "English"]
+          }
+        ],
+        "description": "SpecialWeb شركة تقدم تصميم وتطوير مواقع، تسويق إلكتروني، وإنتاج فيديو."
       }
-    ],
-    "description": "SpecialWeb شركة تقدم تصميم وتطوير مواقع، تسويق إلكتروني، وإنتاج فيديو."
-  }
-  </script>
+    </script>
 
-  <!-- ======== تحسين الأداء إضافي: prefetch لنطاقات خارجية محتملة ======== -->
-  <link rel="dns-prefetch" href="//ajax.googleapis.com">
-  <link rel="dns-prefetch" href="//www.google-analytics.com">
-
-</head>
+    <!-- ======== تحسين الأداء إضافي: prefetch لنطاقات خارجية محتملة ======== -->
+    <link rel="dns-prefetch" href="//ajax.googleapis.com" />
+    <link rel="dns-prefetch" href="//www.google-analytics.com" />
+  </head>
 <body>
 
   <!-- Header مبسّط -->
@@ -454,4 +496,5 @@
 
   <script src="js/script.js"></script>
 </body>
+
 </html>
